<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fahed.developer.md_ejemplo5.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="180dp">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ivFoto"
                android:scaleType="centerCrop"
                android:src="@mipmap/animal_wal_uno" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/scrim"
                android:layout_gravity="bottom"
                android:id="@+id/cvScrim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_titulo"
                android:id="@+id/textView"
                android:layout_gravity="left|bottom"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-bold"
                android:textStyle="normal"
                android:layout_margin="15dp" />

        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="#fff">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@mipmap/ic_sorpresa" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_titulo_nombre"
                    android:id="@+id/textView2"
                    android:fontFamily="sans-serif-ligth"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nombre"
                    android:id="@+id/textView3"
                    android:fontFamily="sans-serif-regular"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_titulo_raza"
                    android:id="@+id/textView4"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_raza"
                    android:id="@+id/textView5"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="#fff"
            android:layout_marginTop="1dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:src="@mipmap/ic_informacion" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_titulo_genero"
                    android:id="@+id/textView7"
                    android:fontFamily="sans-serif-ligth"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_genero"
                    android:id="@+id/textView8"
                    android:fontFamily="sans-serif-regular"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_titulo_edad"
                    android:id="@+id/textView9"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_edad"
                    android:id="@+id/textView10"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:elevation="4dp"
            android:background="#fff"
            android:layout_marginTop="1dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView11"
                    android:src="@mipmap/ic_informacion" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_titulo_peso"
                    android:id="@+id/textView12"
                    android:fontFamily="sans-serif-ligth"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_peso"
                    android:id="@+id/textView13"
                    android:fontFamily="sans-serif-regular"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_titulo_altura"
                    android:id="@+id/textView14"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_altura"
                    android:id="@+id/textView15"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_mascota"
        android:elevation="6dp"/>

</FrameLayout>
